# osutil

./: .gitignore  Cargo.toml  LICENSE  MULTI_PLATFORM_SETUP.md  README-Bash.md  README-PowerShell.md  README.md  build-all.sh  build-and-release.sh  build-freebsd.sh  build-linux.sh  build-macos.sh  build-windows.ps1  install-linux.sh  install-macos.sh  install-windows.ps1  install.sh  mise.toml  osutil.ps1  osutil.sh  publish-instructions.md  start.ps1  start.sh  startdev.ps1  startdev.sh  test-download-simple.ps1  test-download.ps1  test-installer-debug.ps1  test-installers.sh  test-powershell-connection.ps1
core/: Cargo.toml
core/src/: inner.rs
core/tabs/: common-script.ps1  common-script.sh  tabs.toml
core/tabs/applications-setup/: alacritty-setup.ps1  android-debloat.ps1  android-debloat.sh  applite-setup.ps1  applite-setup.sh  commander-one.ps1  commander-one.sh  fastfetch-setup.ps1  fastfetch-setup.sh  grandperspective.ps1  grandperspective.sh  kitty-setup.ps1  kitty-setup.sh  onyx.ps1  onyx.sh  raycast.ps1  raycast.sh  tab_data.toml  zsh-setup.ps1  zsh-setup.sh
core/tabs/applications-setup/browsers/: brave.sh  chromium.sh  google-chrome.sh  vivaldi.sh  waterfox.sh  zen-browser.sh
core/tabs/applications-setup/communication-apps/: discord-setup.sh  telegram-setup.sh
core/tabs/applications-setup/developer-tools/: docker-desktop.ps1  docker-desktop.sh  githubdesktop.ps1  githubdesktop.sh  jetbrains-toolbox.ps1  neovim.ps1  neovim.sh  orbstack.ps1  orbstack.sh  sublime.ps1  sublime.sh  vscode.ps1  vscodium.ps1  zed.ps1
core/tabs/applications-setup/multimedia/: handbrake.ps1  handbrake.sh  iina.ps1  iina.sh  obs.ps1  obs.sh  vlc.ps1  vlc.sh
core/tabs/communication-apps/: discord-setup.ps1  signal-setup.ps1  slack-setup.ps1  telegram-setup.ps1  thunderbird-setup.ps1  zoom-setup.ps1
core/tabs/freebsd/: common-script.sh  tabs.toml
core/tabs/freebsd/applications-setup/: fastfetch-setup.sh  firefox.sh  fix-vm-mouse.sh  tab_data.toml  xfce.sh
core/tabs/freebsd/development/: go.sh  java.sh  tab_data.toml  zig.sh
core/tabs/freebsd/system-setup/: freebsd-upgrade.sh  install-ports.sh  ports.sh  profile-setup.sh  tab_data.toml  update-system.sh
core/tabs/freebsd/utils/: common-utils.sh  tab_data.toml
core/tabs/linux/: common-script.sh  common-service-script.sh  tabs.toml
core/tabs/linux/applications-setup/: alacritty-setup.sh  android-debloat.sh  auto-cpufreq.sh  discord-setup.sh  docker-setup.sh  dwmtitus-setup.sh  eza.sh  fastfetch-setup.sh  grandperspective.sh  linutil-installer.sh  linutil-updater.sh  mybash-setup.sh  package-finder.sh  pkg-tui.rs  podman-compose-setup.sh  podman-setup.sh  rofi-setup.sh  setup-flatpak.sh  shell-setup.sh  tab_data.toml  waydroid-setup.sh  yazi.sh  zsh-setup.sh
core/tabs/linux/desktop-environments/: budgie-setup.sh  cinnamon-setup.sh  common-dm-script.sh  cosmic-setup.sh  deepin-setup.sh  gnome-setup.sh  i3-setup.sh  kde-setup.sh  lxqt-setup.sh  mate-setup.sh  omakub.sh  omarchy.sh  sway-setup.sh  tab_data.toml  xfce-setup.sh
core/tabs/linux/development/: go-pkg.sh  go.sh  java-pkg.sh  java.sh  mise-common.sh  mise.sh  node-pkg.sh  node.sh  ruby.sh  rust-pkg.sh  rust.sh  tab_data.toml  zig.sh
core/tabs/linux/security/: firewalld-baselines.sh  iptables.sh  tab_data.toml  tailscale.sh  ufw-baselines.sh  ufw-docker-setup.sh
core/tabs/linux/system-setup/: cockpit-setup.sh  compile-setup.sh  complete-linux-setup.sh  config-replacement.sh  gaming-setup.sh  git-setup.sh  global-theme.sh  remove-animations.sh  remove-snaps.sh  system-cleanup.sh  system-update-standalone.sh  system-update.sh  tab_data.toml  terminus-tty.sh
core/tabs/linux/utils/: add-ssh-key.sh  auto-login.sh  bluetooth-control.sh  encrypt_decrypt_tool.sh  ip-control.sh  network-device.sh  samba-ssh-setup.sh  service-control.sh  ssh.sh  tab_data.toml  timeshift.sh  utility_functions.sh  wifi-control.sh
core/tabs/macos/: common-script.sh  tabs.toml
core/tabs/macos/applications-setup/: alacritty.sh  applite.sh  discord-setup.sh  fastfetch.sh  ghostty.sh  kitty.sh  package-finder.sh  tab_data.toml  yazi.sh  zsh.sh
core/tabs/macos/communication-apps/: tab_data.toml
core/tabs/macos/development/: go.sh  java.sh  mise-common.sh  mise.sh  node.sh  ruby.sh  rust.sh  tab_data.toml  zig.sh
core/tabs/macos/system-setup/: complete-macos-setup.sh  dev-setup.sh  firewall-hardening.sh  gatekeeper-disable.sh  gatekeeper-tighten.sh  git-setup.sh  power-tuning.sh  privacy-baseline.sh  spotlight-tuning.sh  ssh.sh  system-cleanup.sh  system-update.sh  tab_data.toml  trackpad-setup.sh
core/tabs/system-setup/: dev-setup.ps1  dev-setup.sh  fix-finder.ps1  remove-animations.ps1  ssh.ps1  ssh.sh  system-cleanup.ps1  system-update.ps1  tab_data.toml  touch-id.ps1  touch-id.sh  trackpad-setup.ps1
core/tabs/windows/: tabs.toml
core/tabs/windows/applications-setup/: alacritty-setup.ps1  android-debloat.ps1  applite-setup.ps1  commander-one.ps1  discord-setup.ps1  fastfetch-setup.ps1  grandperspective.ps1  kitty-setup.ps1  nord-backgrounds.ps1  onyx.ps1  raycast.ps1  tab_data.toml  (+1 more)
tui/: Cargo.toml
tui/src/: confirmation.rs  filter.rs  float.rs  floating_text.rs  hint.rs  logo.rs  main.rs  root.rs  running_command.rs  state.rs  system_info.rs  theme.rs  windows_runner.rs
(+170 files in other folders)
