[package]
name = "osutil_core"
description = "The backend of OSutil."
repository = "https://github.com/ChrisTitusTech/osutil/tree/main/core"
edition = "2021"
version.workspace = true
license.workspace = true
include = ["src/*.rs", "Cargo.toml", "tabs/**"]

[dependencies]
include_dir = "0.7.4"
temp-dir = "0.1.14"
serde = { version = "1.0.215", features = ["derive"], default-features = false }
toml = { version = "0.8.19", features = ["parse"], default-features = false }
which = "8.0.0"
ego-tree = "0.10.0"
