[package]
name = "osutil_tui"
description = "Jared's Cross-Platform System Utility Toolbox - OSutil is a toolbox for system utilities across all operating systems."
documentation = "https://github.com/Jaredy899/osutil#osutil"
readme = "../README.md"
edition = "2024"
license.workspace = true
repository = "https://github.com/Jaredy899/osutil"
version.workspace = true
include = ["src/*.rs", "Cargo.toml", "../man/osutil.1"]

[features]
default = []
syntax-highlighting = ["tree-sitter-highlight", "tree-sitter-bash"]

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
oneshot = { version = "0.1.12", features = ["std"], default-features = false }
portable-pty = "0.9.0"
ratatui = { version = "0.29.0", features = ["crossterm"], default-features = false }
tui-term = { version = "0.2.0", default-features = false }
time = { version = "0.3.46", features = ["formatting", "local-offset", "macros"], default-features = false }
unicode-width = { version = "0.2.0", default-features = false }
osutil_core = { path = "../core" }
tree-sitter-bash = { version = "0.25.0", optional = true }
tree-sitter-highlight = { version = "0.25.10", optional = true }
nix = { version = "0.31.1", features = [ "user" ] }
vt100-ctt = "0.16.0"
anyhow = "1.0"
which = "8.0"
ctrlc = "3.5"

[[bin]]
name = "osutil"
path = "src/main.rs"
